--- a/whats_fresh/whats_fresh_api/templates/list.html
+++ b/whats_fresh/whats_fresh_api/templates/list.html
@@ -10,13 +10,10 @@
 
 {% block title %}
 <h2 class='light'>{{ title }}</h2>
-<p class='light accent'>Click on the product to edit it or add a</p>
+<p class='light accent'>Click on the {{ item_classification }} to edit it or add a <span class="new"><a href='{{ new_url }}'>{{ new_text }}</a></span></p>
 {% endblock title %}
 
 {% block content %}
-<div class='new'>
-    <a href='{{ new_url }}'><p>{{ new_text }}</p></a>
-</div>
 <div class='message'><h4 class='light accent'>{{ message }}</h4></div>
     <div class='list'>
 {% for item in item_list %}
