--- a/whats_fresh/whats_fresh_api/static/css/style.scss
+++ b/whats_fresh/whats_fresh_api/static/css/style.scss
@@ -118,7 +118,7 @@ a{
     width: 70%;
     height: auto;
     display: block;
-    margin: 50px auto;
+    margin: 30px auto;
     padding: 10px;
 }
 
@@ -228,13 +228,13 @@ a{
     width: 80%;
 }
 
-.list:hover{
+.preparation:hover, .product:hover, .vendor:hover{
     background-color: $secondary;
 }
 
 .item{
     display: block;
-    font-size: 24pt;
+    font-size: 20pt;
 }
 
 .description{
@@ -245,7 +245,7 @@ a{
     @include buttons;
     display: inline-block;
 
-    p {
+    a {
         padding: 5px;
         line-height: 50px;
         vertical-align: middle;
@@ -266,7 +266,6 @@ a{
 
 .product, .preparation{
     display: block;
-    margin: 15px;
 }
 
 .no_products{
