--- a/whats_fresh/whats_fresh_api/templates/vendor.html
+++ b/whats_fresh/whats_fresh_api/templates/vendor.html
@@ -33,61 +33,65 @@
     {% endif %}
     <h4 id='error_tag' class='light warning'></h4>
     {% csrf_token %}
-    <h3>Basic Info</h3>
-    <p class="field_text">Name*:</p>
-    {{ vendor_form.name }}
-    <p class="field_text">Hours*:</p>
-    {{ vendor_form.name }}
-    <p class="field_text">Description*:</p>
-    {{ vendor_form.description }}
-    <p class="field_text">Story*:</p>
-    {{ vendor_form.story }}
-    <p class=" field_text">In Port:</p>
-    {{ vendor_form.status }}
-    <h3>Location</h3>
-    <p class="field_text">Street Address*:</p>
-    {{ vendor_form.street }}
-    <p class="field_text">City*:</p>
-    {{ vendor_form.city }}
-    <p class="field_text">State*:</p>
-    {{ vendor_form.state }}
-    <p class="field_text">Zipcode*:</p>
-    {{ vendor_form.zip }}
-    <p class=" field_text">Location Description:</p>
-    {{ vendor_form.location_description }}
-    <h3>Contact info: </h3>
-    <p class="field_text">Contact Name*:</p>
-    {{ vendor_form.contact_name }}
-    <p class=" field_text">Website:</p>
-    {{ vendor_form.website }}
-    <p class=" field_text">Email:</p>
-    {{ vendor_form.email }}
-    <p class=" field_text">Phone:</p>
-    {{ vendor_form.phone }}
-    <h3 class="title">Products</h3>
-    <button type="button" onclick="appendProduct()">Add Product</button>
-    <div class="container">
+    <div class='entry_box'>
         {% if existing_product_preparations %}
-        {% for pp in existing_product_preparations %}
-        <div class="product">
-            <select disabled id="existing{{ pp.id }}">
-                <option value="{{ pp.product }}">{{ pp.product }}</option>
-            </select>
-            <select disabled id="existing{{ pp.id }}" class="preparation">
-                <option value="{{ pp.id }}">{{ pp.preparation_text }}</option>
-            </select>
-            <a href="#" onclick="deleteProduct(this);return false;">
-                <img class="delete" src="{% static 'delete.png' %}" />
-            </a>
+        <button  class='dbutton' type="input" onclick="deleteVendor();return false;" />Delete</button>
+        {% endif %}    
+        <h3>Basic Info</h3>
+        <p class="field_text">Name*:</p>
+        {{ vendor_form.name }}
+        <p class="field_text">Hours*:</p>
+        {{ vendor_form.name }}
+        <p class="field_text">Description*:</p>
+        {{ vendor_form.description }}
+        <p class="field_text">Story*:</p>
+        {{ vendor_form.story }}
+        <p class=" field_text">In Port:</p>
+        {{ vendor_form.status }}
+        <h3>Location</h3>
+        <p class="field_text">Street Address*:</p>
+        {{ vendor_form.street }}
+        <p class="field_text">City*:</p>
+        {{ vendor_form.city }}
+        <p class="field_text">State*:</p>
+        {{ vendor_form.state }}
+        <p class="field_text">Zipcode*:</p>
+        {{ vendor_form.zip }}
+        <p class=" field_text">Location Description:</p>
+        {{ vendor_form.location_description }}
+        <h3>Contact info: </h3>
+        <p class="field_text">Contact Name*:</p>
+        {{ vendor_form.contact_name }}
+        <p class=" field_text">Website:</p>
+        {{ vendor_form.website }}
+        <p class=" field_text">Email:</p>
+        {{ vendor_form.email }}
+        <p class=" field_text">Phone:</p>
+        {{ vendor_form.phone }}
+        <h3 class="title">Products</h3>
+        <button type="button" onclick="appendProduct()">Add Product</button>
+        <div class="container">
+            {% if existing_product_preparations %}
+            {% for pp in existing_product_preparations %}
+            <div class="product">
+                <select disabled id="existing{{ pp.id }}">
+                    <option value="{{ pp.product }}">{{ pp.product }}</option>
+                </select>
+                <select disabled id="existing{{ pp.id }}" class="preparation">
+                    <option value="{{ pp.id }}">{{ pp.preparation_text }}</option>
+                </select>
+                <a href="#" onclick="deleteProduct(this);return false;">
+                    <img class="delete" src="{% static 'delete.png' %}" />
+                </a>
+            </div>
+            {% endfor %}
+            {% else %}
+            <span class="no_products">No Products Yet!</span>
+            {% endif %}
+            <input id="preparation_ids" name="preparation_ids" type="hidden" />
         </div>
-        {% endfor %}
-        {% else %}
-        <span class="no_products">No Products Yet!</span>
-        {% endif %}
-        <input id="preparation_ids" name="preparation_ids" type="hidden" />
+        <button type="submit" onclick="setPreparationField();" />Save</button>
     </div>
-    <button type"input" onclick="deleteVendor();return false;" />Delete</button>
-    <button type="submit" onclick="setPreparationField();" />Save</button>
 </form>
 <!-- The template div used by appendProduct() -->
 <div id='new_product'>
@@ -124,17 +128,17 @@
     function deleteVendor()
     {
         $.ajax({
-          type: 'DELETE',
-          headers: { 'X-CSRFToken': '{{ csrf_token }}' },
-          statusCode: {
-            404: function() {
-              $("#error_tag").text('Unable to delete vendor!');
-              $("html, body").animate({ scrollTop: 0 }, "slow");
-            },
-            200: function() {
-              window.location.replace('{% with parent_url|last as last %}{{ last.url }}{% endwith %}/?success=true');
+            type: 'DELETE',
+            headers: { 'X-CSRFToken': '{{ csrf_token }}' },
+            statusCode: {
+                404: function() {
+                    $("#error_tag").text('Unable to delete vendor!');
+                    $("html, body").animate({ scrollTop: 0 }, "slow");
+                },
+                200: function() {
+                    window.location.replace('{% with parent_url|last as last %}{{ last.url }}{% endwith %}/?success=true');
+                }
             }
-          }
         });
     }
 
