--- a/whats_fresh/whats_fresh_api/static/css/style.scss
+++ b/whats_fresh/whats_fresh_api/static/css/style.scss
@@ -80,6 +80,11 @@ a{
     margin: 0px auto;
 }
 
+.step-links {
+    font-family: "Montserrat", sans-serif;
+    font-size: 16pt;
+}
+
 //Header
 .header{
     background: $secondary;
