--- a/whats_fresh/whats_fresh_api/templates/preparation.html
+++ b/whats_fresh/whats_fresh_api/templates/preparation.html
@@ -32,9 +32,8 @@
 
     {% csrf_token %}
     <div class="entry_box">
-        <!--Kind of sketchy, but it works-->
-        {% if title != 'New Preparation' %}
-        <button class='dbutton' type"input" onclick="deletePreparation();return false;" />Delete</button>
+        {% if preparation_form.instance.pk != None %}
+        <button class='dbutton' type="button" onclick="deletePreparation();return false;"/>Delete</button>
         {% endif %}
         <h3>Basic Info</h3>
         <p class="field_text">Name*:</p>
@@ -50,21 +49,25 @@
 
 {% block footer %}
 <script>
+
+
     function deletePreparation()
     {
-        $.ajax({
-            type: 'DELETE',
-            headers: { 'X-CSRFToken': '{{ csrf_token }}' },
-            statusCode: {
-                404: function() {
-                    $("#error_tag").text('Unable to delete preparation!');
-                    $("html, body").animate({ scrollTop: 0 }, "slow");
-                },
-                200: function() {
-                    window.location.replace('{% with parent_url|last as last %}{{ last.url }}{% endwith %}/?success=true');
+        if(confirm('Are you sure you want to delete this preparation?')) {
+            $.ajax({
+                type: 'DELETE',
+                headers: { 'X-CSRFToken': '{{ csrf_token }}' },
+                statusCode: {
+                    404: function() {
+                        $("#error_tag").text('Unable to delete preparation!');
+                        $("html, body").animate({ scrollTop: 0 }, "slow");
+                    },
+                    200: function() {
+                        window.location.replace('{% with parent_url|last as last %}{{ last.url }}{% endwith %}/?success=true');
+                    }
                 }
-            }
-        });
+            });
+        }
     }
 </script>
 {% endblock footer %}
