Write stories interface

--- a/whats_fresh/whats_fresh_api/templates/entry.html
+++ b/whats_fresh/whats_fresh_api/templates/entry.html
@@ -19,5 +19,11 @@
     </a>
 </div>
 
+<div class='entry'>
+    <a href='{% url 'entry-list-stories' %}'>
+        <h4>Stories</h4>
+    </a>
+</div>
+
 
 {% endblock %}
