--- a/whats_fresh/whats_fresh_api/static/css/style.css
+++ b/whats_fresh/whats_fresh_api/static/css/style.css
@@ -34,6 +34,11 @@ p {
 a {
   text-decoration: none; }
 
+.list_check {
+  float: right;
+  display: none;
+}
+
 .light {
   color: #FFF; }
 
@@ -130,7 +135,7 @@ a {
     font-size: 16pt;
     font-family: "Montserrat", sans-serif;
     width: 90%; }
-  .form .submit, .form button, .entry_box .submit, .entry_box button {
+  .form .submit, .form button, .entry_box .submit, .entry_box button, .dbutton {
     background: #FFCA5D;
     color: #333;
     border: 2px solid #333;
