Change duplicate name to hours

--- a/whats_fresh/whats_fresh_api/templates/vendor.html
+++ b/whats_fresh/whats_fresh_api/templates/vendor.html
@@ -41,7 +41,7 @@
         <p class="field_text">Name*:</p>
         {{ vendor_form.name }}
         <p class="field_text">Hours*:</p>
-        {{ vendor_form.name }}
+        {{ vendor_form.hours }}
         <p class="field_text">Description*:</p>
         {{ vendor_form.description }}
         <p class="field_text">Story*:</p>
