remove vendor's story req; change tests

--- a/whats_fresh/whats_fresh_api/templates/vendor.html
+++ b/whats_fresh/whats_fresh_api/templates/vendor.html
@@ -44,7 +44,7 @@
         {{ vendor_form.name }}
         <p class="field_text">Description*:</p>
         {{ vendor_form.description }}
-        <p class="field_text">Story*:</p>
+        <p class="field_text">Story:</p>
         {{ vendor_form.story }}
         <p class=" field_text">In Port:</p>
         {{ vendor_form.status }}
