--- a/whats_fresh/whats_fresh_api/static/css/style.css
+++ b/whats_fresh/whats_fresh_api/static/css/style.css
@@ -45,16 +45,14 @@ a {
 }
 
 .delete_button {
-  position:fixed;
-  bottom: 50px;
-  display: none;
+    display: none;
     color: #333;
     border: 2px solid #333;
     font-size: 16pt;
     font-family: "Montserrat", sans-serif;
     height: auto;
     background: #D54133;
-  margin: 0 auto;
+    margin: 25px;
 }
 
 .light {
