--- a/whats_fresh/whats_fresh_api/templates/entry.html
+++ b/whats_fresh/whats_fresh_api/templates/entry.html
@@ -25,5 +25,11 @@
     </a>
 </div>
 
+<div class='entry'>
+    <a href='{% url 'entry-list-videos' %}'>
+        <h4>Videos</h4>
+    </a>
+</div>
+
 
 {% endblock %}
