--- a/whats_fresh/whats_fresh_api/templates/entry.html
+++ b/whats_fresh/whats_fresh_api/templates/entry.html
@@ -32,4 +32,11 @@
 </div>
 
 
+<div class='entry'>
+    <a href='{% url 'entry-list-images' %}'>
+        <h4>Images</h4>
+    </a>
+</div>
+
+
 {% endblock %}
