Add name to image field

--- a/whats_fresh/whats_fresh_api/templates/image.html
+++ b/whats_fresh/whats_fresh_api/templates/image.html
@@ -41,6 +41,8 @@
         {% endif %}
         <p class="field_text">Image*:</p>
         <input id="id_image" name="image" type="file" />
+        <p class="field_text">Name*:</p>
+        {{ image_form.name }}
         <p class="field_text">Caption*:</p>
         {{ image_form.caption }}
         <button>Save</button>
