Made changes in accordance to the issue
ref #17769
Switched order of products and preparations
Changed preparations to "product form and packaging"
Changed stories to "product education"
Changed videos and images to "video library" and "image library"

--- a/whats_fresh/whats_fresh_api/templates/entry.html
+++ b/whats_fresh/whats_fresh_api/templates/entry.html
@@ -8,33 +8,33 @@
 </div>
 
 <div class='entry'>
-    <a href='{% url 'entry-list-preparations' %}'>
-        <h4>Preparations</h4>
-    </a>
-</div>
-
-<div class='entry'>
     <a href='{% url 'entry-list-products' %}'>
         <h4>Products</h4>
     </a>
 </div>
 
 <div class='entry'>
+    <a href='{% url 'entry-list-preparations' %}'>
+        <h4>Product Form and Packaging</h4>
+    </a>
+</div>
+
+<div class='entry'>
     <a href='{% url 'entry-list-stories' %}'>
-        <h4>Stories</h4>
+        <h4>Product Education</h4>
     </a>
 </div>
 
 <div class='entry'>
     <a href='{% url 'entry-list-videos' %}'>
-        <h4>Videos</h4>
+        <h4>Video Library</h4>
     </a>
 </div>
 
 
 <div class='entry'>
     <a href='{% url 'entry-list-images' %}'>
-        <h4>Images</h4>
+        <h4>Image Library</h4>
     </a>
 </div>
 
